test/spec_vectors/simd_f64x2/fail/module_8.wat
(module (func $f64x2.max-arg-empty (result v128) (f64x2.max)))